# pixies

./: Clicker.py  PageTool.py  README.md  Resizer.py  Scroller.py  demonstrate.ipynb  setup.cfg
src/pixies/: Pixies.py  __init__.py
src/pixies/helper/: PageTool.py  log.py
src/pixies/species/: Clicker.py  Resizer.py  Scroller.py  Toucher.py  Typer.py  __init__.py
