[metadata]
name = pixies
version = 1.0.3
author = qiaosong
author_email = shanzh@pku.edu.cn
description = A front-end monkey testing tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shanqiaosong/pixies
project_urls =
    Bug Tracker = https://github.com/shanqiaosong/pixies/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    selenium

[options.packages.find]
where = src